# ReplCustoms-Experimental

./: .gitignore  .replit  LICENSE  README.md  main.py  pyproject.toml  upcoming.md
.github/workflows/: linting.yml
rc/: config.py  rc.py  shell.py
rc/app/: __init__.py  errors.py  forms.py  login.py  models.py  routes.py
rc/app/static/assets/css/: custom.css
rc/app/static/assets/js/: replauth.js
rc/app/static/assets/js/custom/: secure.js
rc/app/static/data/json/cycles/: r500.json
rc/app/static/me/charts/json/: cycles-500.json  langs-7000.json  subs-7000.json
rc/app/templates/: 404.html  504.html  auth.html  docs.html  error.html  index.html  info.html  leaderboard.html  login.html  logout.html  posts.html  redir.html  redir_old.html  statistics.html  users.html
rc/app/templates/misc/: layout.html
rc/app/templates/templates/: main.html
rc/datatypes/: userObj.json
rc/datatypes/user/: userObj.json
rc/extools/: __init__.py
