[tool.poetry]
name = "rc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-WTF = "^0.14.3"
Flask = "^1.1"
repltalk = "^0.8.12"
flask-caching = "^1.9.0"
flask-misaka = "^1.0.0"
markdown = "^3.2.2"
bs4 = "^0.0.1"
markdown2 = "^2.3.9"
flask-sqlalchemy = "^2.4.4"
flask-login = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
